--- a/css/style.css
+++ b/css/style.css
@@ -1354,31 +1354,43 @@ aside a.close {
 }
 
 /* line 691, ../scss/style.scss */
-.stations, .stations svg {
+.stations {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  overflow: visible;
+}
+
+/* line 699, ../scss/style.scss */
+.stations svg {
   position: absolute;
 }
 
-/* line 695, ../scss/style.scss */
+/* line 703, ../scss/style.scss */
 .stations svg {
   width: 14px;
   height: 14px;
 }
 
-/* line 696, ../scss/style.scss */
+/* line 705, ../scss/style.scss */
 .marker {
   background-position: 0 -665px;
   cursor: pointer;
 }
-/* line 699, ../scss/style.scss */
+/* line 708, ../scss/style.scss */
 .marker.green {
   background-position: -14px -665px;
 }
 
-/* line 704, ../scss/style.scss */
+/* line 713, ../scss/style.scss */
 .infowindow {
   position: absolute;
 }
-/* line 706, ../scss/style.scss */
+/* line 715, ../scss/style.scss */
 .infowindow .box {
   top: 0;
 }
