--- a/scss/style.scss
+++ b/scss/style.scss
@@ -688,11 +688,20 @@ aside {
   z-index:1000;
 }
 
-.stations, .stations svg {
+.stations {
+  width: 100%;
+  height:100%;
+  position:absolute;
+  top:0; right:0; bottom:0; left:0;
+  overflow:visible;
+}
+
+.stations svg {
   position: absolute;
 }
 
 .stations svg { width: 14px; height: 14px; } 
+
 .marker { 
   @include icons-sprite(markers, $offset-x:0);
   cursor:pointer;
