--- a/scss/style.scss
+++ b/scss/style.scss
@@ -176,16 +176,16 @@ nav {
   &.blue .content a.btn { background-color: #0D5FB2; }
 }
 
-// Golden box
-.box.golden {
+// Agencies box
+.box.agencies {
   .header hgroup { // header titles
     h2 { border-color:$gold; }
     h4 { color:$gold; }
   }
 } 
 
-// Green box 
-.box.green {
+// Ashoka box 
+.box.ashoka {
   .header hgroup { // header titles
 
     h2 { border-color:$green; }
@@ -200,11 +200,6 @@ nav {
     h4 { color:$blue; }
   }
 }
-
-// Temporary positioning TODO: get rid of it
-.box.golden { position:absolute; top: 300px; left: 100px; }
-.box.green { position:absolute;  top: 300px; left: 500px; }
-.box.blue { position:absolute;   top: 300px; left: 900px; }
 
 // Navigation 
 nav ul li {
