--- a/css/style.css
+++ b/css/style.css
@@ -1395,33 +1395,23 @@ svg {
   height: 5000px;
 }
 
-/* line 731, ../scss/style.scss */
-body {
-  background: #111;
-}
-
-/* line 735, ../scss/style.scss */
-#states path {
-  fill-opacity: 0;
+/*#states path {
+  fill-opacity:0;
   stroke: #fff;
-  stroke-width: 1.5px;
+  stroke-width:1.5px;
   stroke-linecap: round;
   stroke-linejoin: round;
 }
 
-/* line 743, ../scss/style.scss */
 #counties {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+  position:absolute;
+  top:0; left:0;
+  width:100%;
 }
-
-/* line 749, ../scss/style.scss */
-#counties path {
-  stroke: #ccc;
-  stroke-width: 0.2px;
+#counties path{
+  stroke: red;
+  stroke-width:0.2px;
   stroke-linecap: round;
-  stroke-linejoin: round;
+  stroke-linejoin: round;  
 }
+*/
