--- a/scss/style.scss
+++ b/scss/style.scss
@@ -716,16 +716,10 @@ aside {
   .box { top:0;}
 }
 
-.stations .z {
-  position:relative;
-  width:100px;
-  height:100px;
-  background:red;
-}
-
-svg {
-  width: 2060px;
-  height: 5000px;
+.stations {
+  position:absolute;
+  width:100%;
+  height:100%;
 }
 
 /*#states path {
