--- a/css/style.css
+++ b/css/style.css
@@ -67,7 +67,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 /*** SPRITES ***/
 /* icons */
 /* line 117, icons */
-.icons-sprite, .icons-arrows, .icons-bullet, .icons-calendar, .icons-close, .icons-close_big, .icons-gear, .icons-handle, .icons-iati, .icons-icons, .icons-marker, .icons-markers, .icons-money, .icons-plus, .icons-star, .icons-symbols, .icons-view, .box .content ul li, .box a.close, nav ul li .filter.iati .content ul.symbols > li .icon, nav ul li .filter.iati .content ul.symbols > li .icon.iati, nav ul li .filter.view div.content ul.symbols li .icon, nav ul li .filter.view div.content ul.symbols li .icon.projects, nav ul li .filter.view div.content ul.symbols li .icon.agencies, aside .content ul li.money, aside .content ul li.calendar, aside .content ul li.marker, aside .content ul li.gear, aside .content ul li.plus, aside .content ul li.star, aside a.close, #timeline .handle, .ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default, .ui-state-hover, .ui-widget-content .ui-state-hover, .ui-widget-header .ui-state-hover, .ui-state-focus, .ui-widget-content .ui-state-focus, .ui-widget-header .ui-state-focus, .ui-state-active, .ui-widget-content .ui-state-active, .ui-widget-header .ui-state-active, .marker, .marker.agencies, .marker.ashoka {
+.icons-sprite, .icons-arrows, .icons-bullet, .icons-calendar, .icons-close, .icons-close_big, .icons-gear, .icons-handle, .icons-iati, .icons-icons, .icons-marker, .icons-markers, .icons-money, .icons-plus, .icons-star, .icons-symbols, .icons-view, .box .content ul li, .box a.close, nav ul li .filter.iati .content ul.symbols > li .icon, nav ul li .filter.iati .content ul.symbols > li .icon.iati, nav ul li .filter.view div.content ul.symbols li .icon, nav ul li .filter.view div.content ul.symbols li .icon.projects, nav ul li .filter.view div.content ul.symbols li .icon.agencies, aside .content ul li.money, aside .content ul li.calendar, aside .content ul li.marker, aside .content ul li.gear, aside .content ul li.plus, aside .content ul li.star, aside a.close, #timeline .handle, .ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default, .ui-state-hover, .ui-widget-content .ui-state-hover, .ui-widget-header .ui-state-hover, .ui-state-focus, .ui-widget-content .ui-state-focus, .ui-widget-header .ui-state-focus, .ui-state-active, .ui-widget-content .ui-state-active, .ui-widget-header .ui-state-active, .stations > .marker, .stations > .marker.agencies, .stations > .marker.ashoka {
   background: url('/img/icons-sc9b6e92650.png') no-repeat;
 }
 
@@ -922,14 +922,14 @@ nav ul li .filter .content hr {
 aside {
   position: absolute;
   top: 80px;
-  right: 0;
+  right: -400px;
   background: #fff;
   width: 358px;
   height: 100%;
   background: transparent url(../img/backgrounds/bkg_paper.png) left top repeat-y;
   z-index: 9;
 }
-/* line 541, ../scss/style.scss */
+/* line 543, ../scss/style.scss */
 aside .content {
   background: #fff;
   height: 100%;
@@ -937,56 +937,56 @@ aside .content {
   padding: 31px 24px 27px 33px;
   margin-left: 10px;
 }
-/* line 548, ../scss/style.scss */
+/* line 550, ../scss/style.scss */
 aside .content h4 {
   margin: 0 0 5px 0;
   text-transform: uppercase;
   color: #bbbbbb;
 }
-/* line 550, ../scss/style.scss */
+/* line 552, ../scss/style.scss */
 aside .content ul {
   width: 283px;
 }
-/* line 552, ../scss/style.scss */
+/* line 554, ../scss/style.scss */
 aside .content ul li {
   padding: 19px 0 19px 30px;
   font-size: 15px;
   color: #333333;
   border-bottom: 1px solid #E5E5E5;
 }
-/* line 557, ../scss/style.scss */
+/* line 559, ../scss/style.scss */
 aside .content ul li.money {
   background-position: 0 -701px;
 }
-/* line 558, ../scss/style.scss */
+/* line 560, ../scss/style.scss */
 aside .content ul li.calendar {
   background-position: 0 -145px;
 }
-/* line 559, ../scss/style.scss */
+/* line 561, ../scss/style.scss */
 aside .content ul li.marker {
   background-position: 0 -568px;
 }
-/* line 560, ../scss/style.scss */
+/* line 562, ../scss/style.scss */
 aside .content ul li.gear {
   background-position: 0 -317px;
 }
-/* line 561, ../scss/style.scss */
+/* line 563, ../scss/style.scss */
 aside .content ul li.plus {
   background-position: 0 -771px;
 }
-/* line 562, ../scss/style.scss */
+/* line 564, ../scss/style.scss */
 aside .content ul li.star {
   background-position: 0 -834px;
 }
-/* line 563, ../scss/style.scss */
+/* line 565, ../scss/style.scss */
 aside .content ul li:last-child {
   border: none;
 }
-/* line 568, ../scss/style.scss */
+/* line 570, ../scss/style.scss */
 aside .content .header hgroup {
   width: 283px;
 }
-/* line 571, ../scss/style.scss */
+/* line 573, ../scss/style.scss */
 aside .content .header hgroup h2 {
   padding: 0 0 30px 0;
   font-family: 'News Cycle', sans-serif;
@@ -994,19 +994,19 @@ aside .content .header hgroup h2 {
   border-bottom: 2px solid #1b93cf;
   line-height: 22px;
 }
-/* line 572, ../scss/style.scss */
+/* line 574, ../scss/style.scss */
 aside .content .header hgroup h2.no_border {
   border: none;
   padding: 0;
 }
-/* line 573, ../scss/style.scss */
+/* line 575, ../scss/style.scss */
 aside .content .header hgroup h4 {
   margin: 0 0 6px 0;
   color: #104c6b;
   opacity: .6;
   text-transform: uppercase;
 }
-/* line 578, ../scss/style.scss */
+/* line 580, ../scss/style.scss */
 aside a.close {
   display: block;
   position: absolute;
@@ -1018,12 +1018,12 @@ aside a.close {
   height: 32px;
 }
 
-/* line 581, ../scss/style.scss */
+/* line 583, ../scss/style.scss */
 #map {
   height: 100%;
 }
 
-/* line 583, ../scss/style.scss */
+/* line 585, ../scss/style.scss */
 #timeline {
   position: absolute;
   bottom: 19px;
@@ -1034,14 +1034,14 @@ aside a.close {
   margin-left: -477px;
   z-index: 10000;
 }
-/* line 596, ../scss/style.scss */
+/* line 598, ../scss/style.scss */
 #timeline .slider {
   position: absolute;
   width: 943px;
   height: 80px;
   left: 6px;
 }
-/* line 603, ../scss/style.scss */
+/* line 605, ../scss/style.scss */
 #timeline .handle {
   position: absolute;
   width: 17px;
@@ -1049,28 +1049,28 @@ aside a.close {
   background-position: 0 -411px;
   top: 31px;
 }
-/* line 610, ../scss/style.scss */
+/* line 612, ../scss/style.scss */
 #timeline .handle.min {
   left: 100px;
 }
-/* line 611, ../scss/style.scss */
+/* line 613, ../scss/style.scss */
 #timeline .handle.max {
   left: 700px;
 }
 
-/* line 615, ../scss/style.scss */
+/* line 617, ../scss/style.scss */
 .ui-helper-hidden {
   display: none;
 }
 
-/* line 616, ../scss/style.scss */
+/* line 618, ../scss/style.scss */
 .ui-helper-hidden-accessible {
   position: absolute !important;
   clip: rect(1px 1px 1px 1px);
   clip: rect(1px, 1px, 1px, 1px);
 }
 
-/* line 617, ../scss/style.scss */
+/* line 619, ../scss/style.scss */
 .ui-helper-reset {
   margin: 0;
   padding: 0;
@@ -1082,23 +1082,23 @@ aside a.close {
   list-style: none;
 }
 
-/* line 618, ../scss/style.scss */
+/* line 620, ../scss/style.scss */
 .ui-helper-clearfix:before, .ui-helper-clearfix:after {
   content: "";
   display: table;
 }
 
-/* line 619, ../scss/style.scss */
+/* line 621, ../scss/style.scss */
 .ui-helper-clearfix:after {
   clear: both;
 }
 
-/* line 620, ../scss/style.scss */
+/* line 622, ../scss/style.scss */
 .ui-helper-clearfix {
   zoom: 1;
 }
 
-/* line 621, ../scss/style.scss */
+/* line 623, ../scss/style.scss */
 .ui-helper-zfix {
   width: 100%;
   height: 100%;
@@ -1111,7 +1111,7 @@ aside a.close {
 
 /* Interaction Cues
 ----------------------------------*/
-/* line 626, ../scss/style.scss */
+/* line 628, ../scss/style.scss */
 .ui-state-disabled {
   cursor: default !important;
 }
@@ -1119,7 +1119,7 @@ aside a.close {
 /* Icons
 ----------------------------------*/
 /* states and images */
-/* line 633, ../scss/style.scss */
+/* line 635, ../scss/style.scss */
 .ui-icon {
   display: block;
   text-indent: -99999px;
@@ -1130,7 +1130,7 @@ aside a.close {
 /* Misc visuals
 ----------------------------------*/
 /* Overlays */
-/* line 640, ../scss/style.scss */
+/* line 642, ../scss/style.scss */
 .ui-widget-overlay {
   position: absolute;
   top: 0;
@@ -1141,14 +1141,14 @@ aside a.close {
 
 /* Component containers
 ----------------------------------*/
-/* line 644, ../scss/style.scss */
+/* line 646, ../scss/style.scss */
 .ui-widget-header {
   background: url(../img/backgrounds/bkg_timeline_selected.png) 50% 50% repeat-x;
   color: #ffffff;
   font-weight: bold;
 }
 
-/* line 645, ../scss/style.scss */
+/* line 647, ../scss/style.scss */
 .ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default {
   display: block;
   width: 17px;
@@ -1158,7 +1158,7 @@ aside a.close {
   cursor: pointer;
 }
 
-/* line 646, ../scss/style.scss */
+/* line 648, ../scss/style.scss */
 .ui-state-hover, .ui-widget-content .ui-state-hover, .ui-widget-header .ui-state-hover, .ui-state-focus, .ui-widget-content .ui-state-focus, .ui-widget-header .ui-state-focus {
   display: block;
   cursor: pointer;
@@ -1168,14 +1168,14 @@ aside a.close {
   outline: none;
 }
 
-/* line 647, ../scss/style.scss */
+/* line 649, ../scss/style.scss */
 .ui-state-hover a, .ui-state-hover a:hover {
   color: #c77405;
   text-decoration: none;
   outline: none;
 }
 
-/* line 648, ../scss/style.scss */
+/* line 650, ../scss/style.scss */
 .ui-state-active, .ui-widget-content .ui-state-active, .ui-widget-header .ui-state-active {
   width: 17px;
   height: 18px;
@@ -1183,55 +1183,55 @@ aside a.close {
   outline: none;
 }
 
-/* line 649, ../scss/style.scss */
+/* line 651, ../scss/style.scss */
 .ui-state-active a, .ui-state-active a:link, .ui-state-active a:visited {
   color: #eb8f00;
   text-decoration: none;
   outline: none;
 }
 
-/* line 650, ../scss/style.scss */
+/* line 652, ../scss/style.scss */
 .ui-state-highlight, .ui-widget-content .ui-state-highlight, .ui-widget-header .ui-state-highlight {
   border: 1px solid #fed22f;
   background: #ffe45c url(images/ui-bg_highlight-soft_75_ffe45c_1x100.png) 50% top repeat-x;
   color: #363636;
 }
 
-/* line 651, ../scss/style.scss */
+/* line 653, ../scss/style.scss */
 .ui-state-highlight a, .ui-widget-content .ui-state-highlight a, .ui-widget-header .ui-state-highlight a {
   color: #363636;
 }
 
-/* line 652, ../scss/style.scss */
+/* line 654, ../scss/style.scss */
 .ui-state-error, .ui-widget-content .ui-state-error, .ui-widget-header .ui-state-error {
   border: 1px solid #cd0a0a;
   background: #b81900 url(images/ui-bg_diagonals-thick_18_b81900_40x40.png) 50% 50% repeat;
   color: #ffffff;
 }
 
-/* line 653, ../scss/style.scss */
+/* line 655, ../scss/style.scss */
 .ui-state-error a, .ui-widget-content .ui-state-error a, .ui-widget-header .ui-state-error a {
   color: #ffffff;
 }
 
-/* line 654, ../scss/style.scss */
+/* line 656, ../scss/style.scss */
 .ui-state-error-text, .ui-widget-content .ui-state-error-text, .ui-widget-header .ui-state-error-text {
   color: #ffffff;
 }
 
-/* line 655, ../scss/style.scss */
+/* line 657, ../scss/style.scss */
 .ui-priority-primary, .ui-widget-content .ui-priority-primary, .ui-widget-header .ui-priority-primary {
   font-weight: bold;
 }
 
-/* line 656, ../scss/style.scss */
+/* line 658, ../scss/style.scss */
 .ui-priority-secondary, .ui-widget-content .ui-priority-secondary, .ui-widget-header .ui-priority-secondary {
   opacity: .7;
   filter: Alpha(Opacity=70);
   font-weight: normal;
 }
 
-/* line 657, ../scss/style.scss */
+/* line 659, ../scss/style.scss */
 .ui-state-disabled, .ui-widget-content .ui-state-disabled, .ui-widget-header .ui-state-disabled {
   opacity: .35;
   filter: Alpha(Opacity=35);
@@ -1240,13 +1240,13 @@ aside a.close {
 
 /* Misc visuals
 ----------------------------------*/
-/* line 662, ../scss/style.scss */
+/* line 664, ../scss/style.scss */
 .ui-slider {
   position: relative;
   text-align: left;
 }
 
-/* line 663, ../scss/style.scss */
+/* line 665, ../scss/style.scss */
 .ui-slider .ui-slider-handle {
   position: absolute;
   z-index: 2;
@@ -1255,7 +1255,7 @@ aside a.close {
   cursor: default;
 }
 
-/* line 664, ../scss/style.scss */
+/* line 666, ../scss/style.scss */
 .ui-slider .ui-slider-range {
   position: absolute;
   z-index: 1;
@@ -1265,12 +1265,12 @@ aside a.close {
   background-position: 0 0;
 }
 
-/* line 666, ../scss/style.scss */
+/* line 668, ../scss/style.scss */
 .ui-slider-horizontal {
   height: .8em;
 }
 
-/* line 667, ../scss/style.scss */
+/* line 669, ../scss/style.scss */
 .ui-slider-horizontal .ui-slider-handle {
   cursor: col-resize;
   display: block;
@@ -1278,52 +1278,52 @@ aside a.close {
   margin-left: -0.6em;
 }
 
-/* line 668, ../scss/style.scss */
+/* line 670, ../scss/style.scss */
 .ui-slider-horizontal .ui-slider-range {
   top: 6px;
   height: 68px;
 }
 
-/* line 669, ../scss/style.scss */
+/* line 671, ../scss/style.scss */
 .ui-slider-horizontal .ui-slider-range-min {
   left: 0;
 }
 
-/* line 670, ../scss/style.scss */
+/* line 672, ../scss/style.scss */
 .ui-slider-horizontal .ui-slider-range-max {
   right: 0;
 }
 
-/* line 672, ../scss/style.scss */
+/* line 674, ../scss/style.scss */
 .ui-slider-vertical {
   width: .8em;
   height: 100px;
 }
 
-/* line 673, ../scss/style.scss */
+/* line 675, ../scss/style.scss */
 .ui-slider-vertical .ui-slider-handle {
   left: -0.3em;
   margin-left: 0;
   margin-bottom: -0.6em;
 }
 
-/* line 674, ../scss/style.scss */
+/* line 676, ../scss/style.scss */
 .ui-slider-vertical .ui-slider-range {
   left: 0;
   width: 100%;
 }
 
-/* line 675, ../scss/style.scss */
+/* line 677, ../scss/style.scss */
 .ui-slider-vertical .ui-slider-range-min {
   bottom: 0;
 }
 
-/* line 676, ../scss/style.scss */
+/* line 678, ../scss/style.scss */
 .ui-slider-vertical .ui-slider-range-max {
   top: 0;
 }
 
-/* line 679, ../scss/style.scss */
+/* line 681, ../scss/style.scss */
 #wifi_list {
   display: none;
   position: absolute;
@@ -1332,7 +1332,7 @@ aside a.close {
   z-index: 1000;
 }
 
-/* line 686, ../scss/style.scss */
+/* line 688, ../scss/style.scss */
 .stations {
   width: 100%;
   height: 100%;
@@ -1344,44 +1344,44 @@ aside a.close {
   overflow: visible;
 }
 
-/* line 694, ../scss/style.scss */
+/* line 696, ../scss/style.scss */
 .stations svg {
   position: absolute;
 }
 
-/* line 698, ../scss/style.scss */
+/* line 700, ../scss/style.scss */
 .stations svg {
   width: 14px;
   height: 14px;
 }
 
-/* line 700, ../scss/style.scss */
-.marker {
+/* line 702, ../scss/style.scss */
+.stations > .marker {
   position: absolute;
   width: 14px;
   height: 14px;
   background-position: 0 -665px;
   cursor: pointer;
 }
-/* line 706, ../scss/style.scss */
-.marker.agencies {
+/* line 708, ../scss/style.scss */
+.stations > .marker.agencies {
   background-position: 0 -665px;
 }
-/* line 709, ../scss/style.scss */
-.marker.ashoka {
+/* line 711, ../scss/style.scss */
+.stations > .marker.ashoka {
   background-position: -14px -665px;
 }
 
-/* line 714, ../scss/style.scss */
+/* line 716, ../scss/style.scss */
 .infowindow {
   position: absolute;
 }
-/* line 716, ../scss/style.scss */
+/* line 718, ../scss/style.scss */
 .infowindow .box {
   top: 0;
 }
 
-/* line 719, ../scss/style.scss */
+/* line 721, ../scss/style.scss */
 .stations {
   position: absolute;
   width: 100%;
