--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,26 @@ icons:18
 /Users/javierarce/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.11.7/lib/compass/compiler.rb:122:in `timed'
 /Users/javierarce/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.11.7/lib/compass/compiler.rb:96:in `run'
 /Users/javierarce/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.11.7/lib/compass/commands/watch_project.rb:142:in `recompile'
-/Users/javierarce/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.11.7/lib/compass/commands/watch_project.rb:68:in `perform'
+/Users/javierarce/.rvm/gems/ruby-1.9.2-p290/gems/fssm-0.2.8.1/lib/fssm/path.rb:73:in `call'
+/Users/javierarce/.rvm/gems/ruby-1.9.2-p290/gems/fssm-0.2.8.1/lib/fssm/path.rb:73:in `run_callback'
+/Users/javierarce/.rvm/gems/ruby-1.9.2-p290/gems/fssm-0.2.8.1/lib/fssm/path.rb:55:in `callback_action'
+/Users/javierarce/.rvm/gems/ruby-1.9.2-p290/gems/fssm-0.2.8.1/lib/fssm/path.rb:35:in `update'
+/Users/javierarce/.rvm/gems/ruby-1.9.2-p290/gems/fssm-0.2.8.1/lib/fssm/state/directory.rb:39:in `block in modified'
+/Users/javierarce/.rvm/gems/ruby-1.9.2-p290/gems/fssm-0.2.8.1/lib/fssm/state/directory.rb:37:in `each'
+/Users/javierarce/.rvm/gems/ruby-1.9.2-p290/gems/fssm-0.2.8.1/lib/fssm/state/directory.rb:37:in `modified'
+/Users/javierarce/.rvm/gems/ruby-1.9.2-p290/gems/fssm-0.2.8.1/lib/fssm/state/directory.rb:18:in `refresh'
+/Users/javierarce/.rvm/gems/ruby-1.9.2-p290/gems/fssm-0.2.8.1/lib/fssm/backends/rbfsevent.rb:30:in `block in temporary_multipath_handler'
+/Users/javierarce/.rvm/gems/ruby-1.9.2-p290/gems/fssm-0.2.8.1/lib/fssm/backends/rbfsevent.rb:27:in `each'
+/Users/javierarce/.rvm/gems/ruby-1.9.2-p290/gems/fssm-0.2.8.1/lib/fssm/backends/rbfsevent.rb:27:in `temporary_multipath_handler'
+/Users/javierarce/.rvm/gems/ruby-1.9.2-p290/gems/fssm-0.2.8.1/lib/fssm/backends/rbfsevent.rb:17:in `block (2 levels) in run'
+/Users/javierarce/.rvm/gems/ruby-1.9.2-p290/gems/fssm-0.2.8.1/lib/fssm/backends/rbfsevent.rb:16:in `each'
+/Users/javierarce/.rvm/gems/ruby-1.9.2-p290/gems/fssm-0.2.8.1/lib/fssm/backends/rbfsevent.rb:16:in `block in run'
+/Users/javierarce/.rvm/gems/ruby-1.9.2-p290/gems/rb-fsevent-0.4.3.1/lib/rb-fsevent/fsevent.rb:37:in `call'
+/Users/javierarce/.rvm/gems/ruby-1.9.2-p290/gems/rb-fsevent-0.4.3.1/lib/rb-fsevent/fsevent.rb:37:in `run'
+/Users/javierarce/.rvm/gems/ruby-1.9.2-p290/gems/fssm-0.2.8.1/lib/fssm/backends/rbfsevent.rb:20:in `run'
+/Users/javierarce/.rvm/gems/ruby-1.9.2-p290/gems/fssm-0.2.8.1/lib/fssm/monitor.rb:26:in `run'
+/Users/javierarce/.rvm/gems/ruby-1.9.2-p290/gems/fssm-0.2.8.1/lib/fssm.rb:70:in `monitor'
+/Users/javierarce/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.11.7/lib/compass/commands/watch_project.rb:86:in `perform'
 /Users/javierarce/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.11.7/lib/compass/commands/base.rb:18:in `execute'
 /Users/javierarce/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.11.7/lib/compass/commands/project_base.rb:19:in `execute'
 /Users/javierarce/.rvm/gems/ruby-1.9.2-p290/gems/compass-0.11.7/lib/compass/exec/sub_command_ui.rb:43:in `perform!'
